--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <section class="nav-box">
         <nav class="navbar">
-            <img src="./assets/logo2.jpg" alt="logo" id="logo">
+            <img src="./assets/logo.png" alt="logo" id="logo">
             <i class="bi bi-list" id="menu"></i>
             <ul id="nav">
                 <i class="bi bi-x" id="close"></i>
@@ -29,7 +29,8 @@
         <div class="hero-left">
             <h1>Alimenta su instinto, nutre su felicidad</h1>
             <h3>Todo comenzó con la búsqueda de una mejor forma de alimentar a quienes más amamos. Hoy, Barf es parte de nuestra familia y queremos compartirlo contigo</h3>
-            <p>Encuéntranos como <br> <span> "Patitas Felices" </span></p>
+            <p>Encuéntranos como</p>
+            <img src="./assets/logo2.jpg" alt="">
             <button id="btn-contacto" onclick="location.href='#contacto'">Contacto</button>
         </div>
 
